# field-ops-benchmarks

./: .gitignore  Cargo.toml  README.md  build.rs
shaders/metal/: bench_bigint_mul.metal  bench_bn254_field_add.metal  bench_bn254_field_mul.metal  bench_field_add.metal  bench_field_mul.metal  bench_field_sub.metal  bench_m31_field_add.metal  bench_m31_field_mul.metal  bench_mersenne_field_add.metal  bench_mersenne_field_mul.metal  bench_u256_add.metal  bench_u256_sub.metal  bench_u32_add.metal  bench_u32_baseline.metal  bench_u64_add.metal  bench_u64_native.metal  bigint.metal  field.metal  types.metal
shaders/wgsl/: bench_bigint_mul.wgsl  bench_bn254_field_add.wgsl  bench_bn254_field_mul.wgsl  bench_field_add.wgsl  bench_field_mul.wgsl  bench_field_sub.wgsl  bench_m31_field_add.wgsl  bench_m31_field_mul.wgsl  bench_mersenne_field_add.wgsl  bench_mersenne_field_mul.wgsl  bench_u256_add.wgsl  bench_u256_sub.wgsl  bench_u32_add.wgsl  bench_u32_baseline.wgsl  bench_u64_add.wgsl  bench_u64_emulated.wgsl  bigint.wgsl  field.wgsl
src/: config.rs  lib.rs  main.rs  reporter.rs  results.rs  tui.rs
src/metal/: device.rs  mod.rs  pipeline.rs  runner.rs
src/vulkan/: mod.rs
src/webgpu/: device.rs  mod.rs  pipeline.rs  runner.rs
