[package]
name = "field-ops-benchmarks"
version = "0.1.0"
edition = "2021"
description = "GPU compute benchmark for u256/field arithmetic across Metal and WebGPU"
build = "build.rs"

[features]
default = ["metal", "webgpu"]
metal = ["dep:metal", "dep:objc", "dep:block"]
webgpu = ["dep:wgpu"]

[dependencies]
# Metal (macOS only)
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }

# WebGPU
wgpu = { version = "23", optional = true }
pollster = "0.4"

# Common
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
rand = "0.8"
thiserror = "1"

# Interactive TUI
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# CLI (for batch mode)
clap = { version = "4", features = ["derive"] }

[build-dependencies]
# For shader compilation - we'll handle this manually for now
# shaderc = "0.8"  # GLSL -> SPIR-V (uncomment when implementing Vulkan)
